# solana_study

./: Anchor.toml  package-lock.json  tsconfig.json
programs/yours-nft/: Cargo.toml
programs/yours-nft/src/: lib.rs  mint.rs  sell.rs
tests/: practice.ts  yours-nft.ts
